--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -101,6 +105,17 @@
             </ul>
         </section>
        
+
+        <h1 class="title">Iste odit similique sit</h1>
+        <p class="text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi,
+            <span>veritatis nihil alias iste</span> odit similique sit eius optio veniam,
+            impedit cumque fuga facere labore quo id necessitatibus quaerat rerum.
+        </p>
+        <a href="" class="link">Читать дальше...</a>
+
+
+
       
     </main>
 
