--- a/portfolio.html
+++ b/portfolio.html
@@ -35,64 +35,73 @@
     <h1>Портфоліо</h1>
     <ul>
         <li>
-            <button>Все</button>
+            <button type="button">Все</button>
         </li>
         <li>
-            <button>Веб-сайти</button>
+            <button type="button">Веб-сайти</button>
         </li>
         <li>
-            <button>Приложения</button>
+            <button type="button">Приложения</button>
         </li>
         <li>
-            <button>Дизайн</button>
+            <button type="button">Дизайн</button>
         </li>
         <li>
-            <button>Маркетинг</button>
+            <button type="button">Маркетинг</button>
         </li>
     </ul>
 
     <ul>
        <li>
+            <a href=""></a>
             <img src="./image/5.jpg" width="370" alt="Відкритий ноут" >
             <h2>Технокряк</h2>
             <p>Веб-сайт</p> 
         </li> 
         <li>
+            <a href=""></a>
             <img src="./image/6.jpg" width="370" alt="Баскетбол">
             <h2>Постер New Orlean vs Golden Star</h2>
             <p>Веб-сайт</p>
         </li>
         <li>
+            <a href=""></a>
             <img src="./image/7.jpg" width="370" alt="Постер риби">
             <h2>Ресторан Seafood</h2>
             <p>Приложение</p>
         </li>
         <li>
+            <a href=""></a>
             <img src="./image/8.jpg" width="370" alt="Навушники">
             <h2>Проект Prime</h2>
             <p>Маркетинг</p>
         </li>
         <li>
+            <a href=""></a>
             <img src="./image/9.jpg" width="370" alt="Коробки">
             <h2>Проект Boxes</h2>
             <p>Приложение</p>
         </li>
         <li>
+            <a href=""></a>
             <img src="./image/10.jpg" width="370" alt="Мак">
             <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
         </li>
         <li>
+            <a href=""></a>
             <img src="./image/11.jpg" width="370" alt="Відкрита книга">
             <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
         </li>
         <li>
+            <a href=""></a>
             <img src="./image/12.jpg" width="370" alt="Кулон">
             <h2>Проект LAB</h2>
             <p>Маркетинг</p>
         </li>
         <li>
+            <a href=""></a>
             <img src="./image/13.jpg" width="370" alt="Відкритий ноут">
             <h2>Growing Business</h2>
             <p>Приложение</p>
