--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <title>Document</title>
@@ -14,10 +12,10 @@
 <body>
 
     <!-- Заголовок сайту -->
+
     <header class="header-phone">
         <nav>
-            <a href="" class="logo">WebStudio</a>
-
+            <a href="" class="logo-studio"><span class="logo-web">Web</span>Studio</a>
             <ul class="header-nav">
                 <li><a href="" class="link current">Студия</a></li> 
                 <li><a href="./portfolio.html">Портфолио</a></li>
@@ -36,6 +34,7 @@
     </header>
 
     <!-- Тіло сайту -->
+
     <main>
         <section class="section-phone-with-a-button">
             <h1 class="section-title-with-a-button">Эффективные решения <br> для вашего бизнеса</h1>
@@ -68,7 +67,7 @@
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./image/img.jpg" alt="Людина з ноутом" width="370">
+                    <img src="./image/box 1 (1).jpg" alt="Людина з ноутом" width="370">
                 </li>
                 <li>
                     <img src="./image/box2.jpg" alt="Людина з телефоном" width="370">
@@ -104,18 +103,6 @@
                 </li>
             </ul>
         </section>
-       
-
-        <h1 class="title">Iste odit similique sit</h1>
-        <p class="text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi,
-            <span>veritatis nihil alias iste</span> odit similique sit eius optio veniam,
-            impedit cumque fuga facere labore quo id necessitatibus quaerat rerum.
-        </p>
-        <a href="" class="link">Читать дальше...</a>
-
-
-
       
     </main>
 
