--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
         <nav>
             <a href="" class="logo-studio"><span class="logo-web">Web</span>Studio</a>
             <ul class="header-nav">
-                <li><a href="" class="link current">Студия</a></li> 
+                <li><a href="" class="link current">Студия</a></li>
                 <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
@@ -25,10 +25,10 @@
 
            <ul>
                <li>
-                <a href="mailto:info@devstudio.com" class="header-nav-mail">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="header-nav-mail">info@devstudio.com</a>
                </li>
                <li>
-                <a href="tel:+380961111111" class="header-nav-tel">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="header-nav-tel">+38 096 111 11 11</a>
                </li>
            </ul>
     </header>
@@ -108,12 +108,15 @@
 
     <!-- Футер(підвал сайту) -->
 
-    <footer>
-        <a href="">WebStudio</a> <br>
+    <footer class="footer-phone">
+    <a href="" class="logo-studio-white"><span class="logo-web">Web</span>Studio</a> <br>
         <address>
-            г. Киев, пр-т Леси Украинки, 26 <br>
-            <a href="maito:info@example.com">info@example.com</a><br>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <p class="address-block">
+                <span class="city-adress">г. Киев, пр-т Леси Украинки, 26</span> <br>
+                <a href="maito:info@example.com" class="link">info@example.com</a><br>
+                <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+            </p>
+          
         </address>
     </footer>
 
